# video_procesor

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  install.bat  install.sh  output.csv  pyproject.toml  requirements.txt  run.bat  run.sh  video_processor.py
.github/workflows/: test-install.yml
client/: README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: App.module.css  App.test.tsx  App.tsx  main.tsx
client/src/api/: streamsApi.ts
client/src/config/: hlsConfig.ts
client/src/constants/: file.ts  streams.ts
client/src/hooks/: streamReducer.ts  useAdvancedSettings.ts  useFileInput.ts  useHlsPlayer.ts  useStatusPoller.ts  useStream.ts
client/src/test/: FileUpload.test.tsx  StatusBadge.test.tsx  UrlInput.test.tsx  setup.ts  streamsApi.test.ts  useFileInput.test.ts  useStatusPoller.test.ts  useStream.test.ts
client/src/utils/: file.ts
docs/: StreamingPlan.md  blur_box_scenarios.md
processor/: Dockerfile  README.md  install.bat  install.sh  pyproject.toml
processor/video_processor/: __init__.py  audio.py  cli.py  detection.py  frame_ops.py  hls_puller.py  models.py  pipeline.py  server.py  streaming.py  track.py  track_manager.py
server/: Dockerfile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
server/src/: app.module.ts  main.ts  types.ts
server/src/common/: request-context.ts  (+3 more)
video_processor/: __init__.py  audio.py  cli.py  detection.py  frame_ops.py  models.py  pipeline.py  segment_writer.py  track.py  track_manager.py  tracking.py
(+37 files in other folders)
