[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "video-processor"
version = "0.1.0"
description = "Blur faces and license plates in video files"
requires-python = ">=3.10"
dependencies = [
    "ultralytics",
    "opencv-contrib-python",
    "open-image-models[onnx]",
    "Pillow",
    "tqdm",
    "scipy",
    "imageio-ffmpeg",
]

[project.scripts]
video-processor = "video_processor.cli:main"

[project.optional-dependencies]
server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["video_processor*"]
